--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta title="Tribute Page">
-    <link rel="icon" href="tribute-page\favicon_r_red.ico">
+    <link rel="icon" href="favicon_r_red.ico">
     <link rel="stylesheet" href="styles.css">
   </head>
 
