--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <meta title="Tribute Page">
+    <meta title="RR Tribute Page">
     <link rel="icon" href="favicon_r_red.ico">
     <link rel="stylesheet" href="styles.css">
   </head>
